# test_filing

./: .env.sample  .gitignore  README.md  bca_scrape.py  debug_filings_to_news.json  debug_final_rows_filings.json  extracted_table.csv  extracted_table_simple.csv  idx_filing_updated_from_v2_2025.json  matched_idx_filings_v2_2025.json  matched_map.json  not_matched_idx_filings_old_2025.json  output.txt  output_others.json  pyproject.toml  requirements.txt  scrape_jkt_globe.py  test.py
alerts/: alerts_idx.json  alerts_inserted_filings.json  alerts_not_inserted.json  alerts_not_inserted_downloader.json  alerts_not_inserted_idx.json  alerts_not_inserted_non_idx.json  inconsistent_alerts.json  low_title_similarity_alerts.json  suspicious_alerts.json
alerts_inserted/: alerts_idx.json  alerts_inserted_filings.json
alerts_not_inserted/: alerts_not_inserted_downloader.json  alerts_not_inserted_idx.json  alerts_not_inserted_non_idx.json
artifacts/: alerts_inserted_2025-12-18.json  alerts_inserted_2025-12-19.json  alerts_not_inserted_2025-12-18.json
data/: alerts_test.json  articles.json  articles.jsonl  debug_ingestion.json  downloaded_pdfs.json  filings_data.json  idx_ann_20250901_20250905.json  idx_ann_20250912_20250914.json  idx_announcements.json  ingestion.json  parsed_idx_output.json  parsed_non_idx_output.json  price_tx_preview.csv  simple_runner_alerts.json  simple_runner_output.json
src/common/: env.py  (+10 more)
test_new_price_transaction/: matched_idx_filings_old_2025.json  matched_idx_filings_v2_2025.json  matched_map.json  not_matched_idx_filings_old_recent_2025.json
(+276 files in other folders)
